--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@ content %}
 <div class="container">
   <div class="row mt-3">
     <div class="col-6">
-      <form method="POST" action="/explain">
+      <form method="POST" action="/result">
         <div class="form-group">
           <label for="queryTextArea">Insert Query</label>
           <textarea
@@ -28,18 +28,28 @@ content %}
             rows="10"
           ></textarea>
         </div>
-        <button tyoe="submit" class="btn btn-primary">Submit</button>
+        <button id="btnFetch" type="submit" class="btn btn-primary">
+          Submit
+        </button>
       </form>
     </div>
     <div class="col-6">
-      <h5>Explanation</h5>
+      <h3>Query</h3>
+      {% if query %}
+      <span>{{query}}</span>
+      {% else %}
+      <span>Insert query to begin</span>
+      {% endif %}
+      <h3 class="mt-3">Explanation</h3>
+      {% if explanation %}
       <ol>
-        <li>Anthony is gay</li>
-        <li>Anthony is gay</li>
-        <li>Anthony is gay</li>
-        <li>Anthony is gay</li>
-        <li>Anthony is gay</li>
+        {% for item in explanation %}
+        <li>{{item}}</li>
+        {% endfor %}
       </ol>
+      {% else %}
+      <span>Insert query to begin</span>
+      {% endif %}
     </div>
   </div>
 </div>
