--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@ content %}
         <button id="btnFetch" type="submit" class="btn btn-primary">
           Submit
         </button>
-        <p class="mt-3">We introduced a custom syntax to vary the selectivity of a query for this project. Use the
+        <p class="mt-3">We introduced a custom syntax to vary the selectivity of a query for this project. Use a custom
           <code>VARY()</code> function within a <code>WHERE</code> clause to let our querying engine generate
           alternative plans with varying selectivity. Note that <code>VARY()</code> only works on numerical columns.</p>
         <span>Example:</span>
