--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,15 @@ content %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Query Plan</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
 </nav>
@@ -14,19 +21,29 @@ content %}
       <form method="POST" action="/result">
         <div class="form-group">
           <label for="queryTextArea">Insert Query</label>
-          <textarea class="form-control" id="queryTextArea" name="queryText" rows="10"
-            placeholder="Type your SQL query here"></textarea>
+          <textarea
+            class="form-control"
+            id="queryTextArea"
+            name="queryText"
+            rows="10"
+            placeholder="Type your SQL query here"
+          ></textarea>
         </div>
         <button id="btnFetch" type="submit" class="btn btn-primary">
           Submit
         </button>
-        <p class="mt-3">We introduced a custom syntax to vary the selectivity of a query for this project. Use a custom
-          <code>VARY()</code> function within a <code>WHERE</code> clause to let our querying engine generate
-          alternative plans with varying selectivity. Note that <code>VARY()</code> only works on numerical columns.</p>
+        <p class="mt-3">
+          We introduced a custom syntax to vary the selectivity of a query for
+          this project. Use a custom <code>VARY()</code> function within a
+          <code>WHERE</code> clause to let our querying engine generate
+          alternative plans with varying selectivity. Note that
+          <code>VARY()</code> only works on numerical columns.
+        </p>
         <span>Example:</span>
         <code>SELECT * FROM students WHERE VARY(gpa)</code>
-        <p class="mt-3">The engine will vary the gpa based on its statistical distribution and conduct queries with
-          different values.
+        <p class="mt-3">
+          The engine will vary the gpa based on its statistical distribution and
+          conduct queries with different values.
         </p>
       </form>
     </div>
@@ -64,6 +81,17 @@ content %}
       {% if explanation %}
       <ol>
         {% for item in explanation %}
+        <li>{{item}}</li>
+        {% endfor %}
+      </ol>
+      {% else %}
+      <span>Insert query to begin</span>
+      {% endif %}
+      <hr />
+      <h3 class="mt-3">Histogram Bounds</h3>
+      {% if bounds %}
+      <ol>
+        {% for item in bounds %}
         <li>{{item}}</li>
         {% endfor %}
       </ol>
