--- a/templates/index.html
+++ b/templates/index.html
@@ -3,15 +3,8 @@ content %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Query Plan</a>
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 </nav>
@@ -21,13 +14,8 @@ content %}
       <form method="POST" action="/result">
         <div class="form-group">
           <label for="queryTextArea">Insert Query</label>
-          <textarea
-            class="form-control"
-            id="queryTextArea"
-            name="queryText"
-            rows="10"
-            placeholder="Type your SQL query here"
-          ></textarea>
+          <textarea class="form-control" id="queryTextArea" name="queryText" rows="10"
+            placeholder="Type your SQL query here"></textarea>
         </div>
         <button id="btnFetch" type="submit" class="btn btn-primary">
           Submit
@@ -40,7 +28,9 @@ content %}
           <code>VARY()</code> only works on numerical columns.
         </p>
         <span>Example:</span>
-        <code>SELECT * FROM students WHERE VARY(gpa)</code>
+        <code>
+          SELECT * FROM lineitem WHERE VARY(l_quantity) 
+        </code>
         <p class="mt-3">
           The engine will vary the gpa based on its statistical distribution and
           conduct queries with different values.
