--- a/templates/index.html
+++ b/templates/index.html
@@ -3,15 +3,8 @@ content %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Query Plan</a>
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 </nav>
@@ -21,13 +14,8 @@ content %}
       <form method="POST" action="/result">
         <div class="form-group">
           <label for="queryTextArea">Insert Query</label>
-          <textarea
-            class="form-control"
-            id="queryTextArea"
-            name="queryText"
-            rows="10"
-            placeholder="Type your SQL query here"
-          ></textarea>
+          <textarea class="form-control" id="queryTextArea" name="queryText" rows="10"
+            placeholder="Type your SQL query here"></textarea>
         </div>
         <button id="btnFetch" type="submit" class="btn btn-primary">
           Submit
@@ -65,6 +53,9 @@ content %}
       {% else %}
       <span>Insert query to begin</span>
       {% endif %}
+      {% if graph_1 %}
+      <img src="{{ url_for('static', filename=graph_1) }}" width="600" height="400" />
+      {% endif %}
       <hr />
       <h3 class="mt-3">Query Plan 2</h3>
       {% if explanation %}
@@ -76,6 +67,9 @@ content %}
       {% else %}
       <span>Insert query to begin</span>
       {% endif %}
+      {% if graph_2 %}
+      <img src="{{ url_for('static', filename=graph_2) }}" width="600" height="400" />
+      {% endif %}
       <hr />
       <h3 class="mt-3">Query Plan 3</h3>
       {% if explanation %}
@@ -86,6 +80,9 @@ content %}
       </ol>
       {% else %}
       <span>Insert query to begin</span>
+      {% endif %}
+      {% if graph_3 %}
+      <img src="{{ url_for('static', filename=graph_3) }}" width="600" height="400" />
       {% endif %}
       <hr />
       <h3 class="mt-3">Histogram Bounds</h3>
