--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@ content %}
     <span class="navbar-toggler-icon"></span>
   </button>
 </nav>
-<div class="container">
+<div class="px-5">
   <div class="row mt-3">
     <div class="col-6">
       <form method="POST" action="/result">
