--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@ content %}
           SELECT * FROM lineitem WHERE VARY(l_quantity) 
         </code>
         <p class="mt-3">
-          The engine will vary the gpa based on its statistical distribution and
+          The engine will vary the selectivity based on its statistical distribution and
           conduct queries with different values.
         </p>
       </form>
