add different explain in index

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,9 +46,9 @@ content %}
       {% endif %}
       <hr />
       <h3 class="mt-3">Query Plan 1</h3>
-      {% if explanation %}
+      {% if explanation_1 %}
       <ol>
-        {% for item in explanation %}
+        {% for item in explanation_1 %}
         <li>{{item}}</li>
         {% endfor %}
       </ol>
@@ -60,9 +60,9 @@ content %}
       {% endif %}
       <hr />
       <h3 class="mt-3">Query Plan 2</h3>
-      {% if explanation %}
+      {% if explanation_2 %}
       <ol>
-        {% for item in explanation %}
+        {% for item in explanation_2 %}
         <li>{{item}}</li>
         {% endfor %}
       </ol>
@@ -74,9 +74,9 @@ content %}
       {% endif %}
       <hr />
       <h3 class="mt-3">Query Plan 3</h3>
-      {% if explanation %}
+      {% if explanation_3 %}
       <ol>
-        {% for item in explanation %}
+        {% for item in explanation_3 %}
         <li>{{item}}</li>
         {% endfor %}
       </ol>
