--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@ content %}
       {% if explanation_1 %}
       <ol>
         {% for item in explanation_1 %}
-        <li>{{item}}</li>
+        <li>{{item | safe}}</li>
         {% endfor %}
       </ol>
       {% else %}
@@ -63,7 +63,7 @@ content %}
       {% if explanation_2 %}
       <ol>
         {% for item in explanation_2 %}
-        <li>{{item}}</li>
+        <li>{{item | safe}}</li>
         {% endfor %}
       </ol>
       {% else %}
@@ -77,7 +77,7 @@ content %}
       {% if explanation_3 %}
       <ol>
         {% for item in explanation_3 %}
-        <li>{{item}}</li>
+        <li>{{item | safe}}</li>
         {% endfor %}
       </ol>
       {% else %}
