--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,9 @@ content %}
       {% endif %}
       <hr />
       <h3 class="mt-3">Query Plan 1</h3>
+      {% if total_cost_1 %}
+      <p class="mt-3"> Total cost: {{total_cost_1}}</p>
+      {% endif %}
       {% if explanation_1 %}
       <ol>
         {% for item in explanation_1 %}
@@ -60,6 +63,9 @@ content %}
       {% endif %}
       <hr />
       <h3 class="mt-3">Query Plan 2</h3>
+      {% if total_cost_2 %}
+      <p class="mt-3">Total cost: {{total_cost_2}} </p>
+      {% endif %}
       {% if explanation_2 %}
       <ol>
         {% for item in explanation_2 %}
@@ -74,6 +80,9 @@ content %}
       {% endif %}
       <hr />
       <h3 class="mt-3">Query Plan 3</h3>
+      {% if total_cost_3 %}
+      <p class="mt-3"> Total cost: {{total_cost_3}}</p>
+      {% endif %}
       {% if explanation_3 %}
       <ol>
         {% for item in explanation_3 %}
