update parser to make all node type consistently bolded

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,8 @@ content %}
       {% else %}
       <span>Insert query to begin</span>
       {% endif %}
+      <p class="mt-3"> Explanations are ordered from bottom of tree to top</p>
+      <p class="mt-3"> Arrow points to sub queries to be executed by this query</p>
       <hr />
       <h3 class="mt-3">Query Plan 1</h3>
       {% if total_cost_1 %}
