add code for sequential scan and index scan

--- a/templates/index.html
+++ b/templates/index.html
@@ -65,6 +65,18 @@ content %}
           <td>{{total_plan_rows_2}}</td>
           <td>{{total_plan_rows_3}}</td>
         </tr>
+        <tr>
+          <td>Total sequential scans</td>
+          <td>{{total_seq_scan_1}}</td>
+          <td>{{total_seq_scan_2}}</td>
+          <td>{{total_seq_scan_3}}</td>
+        </tr>
+        <tr>
+          <td>Total index scans</td>
+          <td>{{total_index_scan_1}}</td>
+          <td>{{total_index_scan_2}}</td>
+          <td>{{total_index_scan_3}}</td>
+        </tr>
       </table>
       <hr />
       <h3 class="mt-3">Query Plan 1</h3>
